# nyx-automation

./: .gitattributes  .gitignore  Git.md  INSTALLATION_INSTRUCTIONS.md  INSTALLATION_REQUIREMENTS.md  LOCAL_SSL_CONFIGURATION.md  PROXY_SSL_CONFIGURATION.md  README.md  SSL_CERTIFICATE_HANDLING.md  TROUBLESHOOTING_SSL_ERRORS.md  ssl-diagnostic.js
.github/workflows/: release.yml
.qwen/: PROJECT_SUMMARY.md
client/: .gitignore  BUNDLING_STRATEGY.md  README.md  TAURI_TEST_PLAN.md  build-complete.cjs  build-no-check.js  build-with-browser.cjs  build-with-browser.js  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.app.json  vite.config.tauri.ts  vite.config.ts
client/public/: manifest.json  sw.js
client/scripts/: download-browser-gha.cjs  download-browser-gha.js
client/src/: index.css  main.tsx  routeTree.gen.ts
client/src-tauri/: Cargo.toml  README.md  installer.nsi  postinstall.cjs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/auth/: auth-layout.tsx  logout-success.tsx
client/src/components/: command-menu.tsx  profile-dropdown.tsx  tauri-test.tsx  theme-switch.tsx
client/src/errors/: error-boundary.tsx  general-error.tsx
client/src/hooks/: use-dialog-state.ts  use-loading-mutation.ts  (+1 more)
server/: .gitignore  README.md  TESTING-GUIDE.md  app.js  package.json  ssl-diagnostic.js  start.js
server/scripts/: download-browser.cjs  init-storage.js  migrate-directories.js  monitor-usage.js  quick-start-campaign-action.js  setup-system.js  test-browser.js  verify-campaign-api.js
server/tests/: anti-detection-verification.js  fingerprint-evaluation.js  fingerprint-test.js  simple-playwright-test.js  test-campaign-visible.js  visible-browser-test.js
(+249 files in other folders)
